--- a/angular.json
+++ b/angular.json
@@ -89,7 +89,8 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects/index.html"
             ],
             "styles": [
               "src/styles.scss"
