--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "^6.1.3",
+    "tslint": "~6.1.0",
     "typescript": "~3.9.5"
   }
 }
